<resources>
    <string name="app_name">EMOTIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_to_emotio">Welcome To EMOTIO</string>
    <string name="hello">HELLO!!!</string>
    <string name="preferred_age_group">Preferred Age Group</string>
    <string name="auto_play_video">Auto Play Video</string>
    <string name="view_learned_history">View Learned History</string>
    <string name="check_for_update">Check For Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="auto_show_detail">Auto Show Detail</string>
    <string name="suggest_opposite_in_detail">Suggest Opposite Emotion in Detail</string>
</resources>